# BASusi

./: Literatur.aux  Literatur.dvi  Literatur.tex  Literatur.tex~
Test_hp-FEM/: equationsystem  fem_linear  fem_linear.f  fem_linear.f~  makefile  plotoutput.m
static_condensation/: CMakeLists.txt  input  main.f  makefile  makefile~  multiplot.m  utilities.f  utilities.mod
